--- a/webview/components/toolbar/toolbar.css
+++ b/webview/components/toolbar/toolbar.css
@@ -91,7 +91,6 @@
     font-size: 12px;
     font-family: inherit;
     cursor: pointer;
-    outline: none;
 }
 
 .tb-select:hover {
